att detalhes orcamento

--- a/templates/detalhes_orcamento.html
+++ b/templates/detalhes_orcamento.html
@@ -49,19 +49,19 @@
 
       <div class="col-12">
         <label class="form-label" for="problema_informado">Problema informado:</label>
-        <textarea class="form-control" id="problema_informado" name="problema_informado" rows="3" placeholder="Descreva o defeito..." value="{{orcamento.problema_informado}}"></textarea>
+        <textarea class="form-control" id="problema_informado" name="problema_informado" rows="3" placeholder="Descreva o defeito...">{{orcamento.problema_informado}}</textarea>
       </div>
       <div class="col-12">
           <label class="form-label" for="problema_constatado">Problema constatado:</label>
-          <textarea class="form-control" id="problema_constatado" name="problema_constatado" rows="3" placeholder="Descreva o que constatou..." value="{{orcamento.problema_constatado}}" ></textarea>
+          <textarea class="form-control" id="problema_constatado" name="problema_constatado" rows="3" placeholder="Descreva o que constatou...">{{orcamento.problema_constatado}}</textarea>
       </div>
       <div class="col-12">
           <label class="form-label" for="observacoes_cliente">Observações (Visível para o cliente):</label>
-          <textarea class="form-control" id="observacoes_cliente" name="observacoes_cliente" rows="3" value="{{orcamento.observacoes_cliente}}" ></textarea>
+          <textarea class="form-control" id="observacoes_cliente" name="observacoes_cliente" rows="3">{{orcamento.observacoes_cliente}}</textarea>
       </div>
       <div class="col-12">
           <label class="form-label" for="observacoes_internas">Observações (Não visível para o cliente):</label>
-          <textarea class="form-control" id="observacoes_internas" name="observacoes_internas" rows="3" value="{{orcamento.observacoes_internas}}"></textarea>
+          <textarea class="form-control" id="observacoes_internas" name="observacoes_internas" rows="3">{{orcamento.observacoes_internas}}</textarea>
       </div>
 
       <div class="col-md-6">
