--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,15 @@
             <i class="bi bi-house-door me-1"></i>Dashboard
           </a>
         </li>
-
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-plus-circle me-1"></i>Utilidades
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{{ url_for('novo_curriculo') }}">Novo Currículo</a></li>
+            <li><hr class="dropdown-divider"></li>
+          </ul>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-plus-circle me-1"></i>Cadastros
