--- a/templates/curriculo_passo2.html
+++ b/templates/curriculo_passo2.html
@@ -8,9 +8,10 @@
         {% endfor %}
     </div>
     <button type="button" id="add-formacao">Adicionar Formação +</button>
+    {{ form.submit(class='btn btn-primary mt-3') }}
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
     <script>
         ad_formacao = document.getElementById("add-formacao");
         let contador = document.querySelectorAll('#formacao-container input').length;
@@ -25,4 +26,4 @@
             contador++;
         });
     </script>
-{% endblock %}
+{% endblock scripts %}
